--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
+    "react-spring": "^8.0.27",
     "react-transition-group": "^4.4.1"
   },
   "scripts": {
