--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ktonner.github.io/Portfolio",
+  "homepage": "http://ktonner.github.io/Portfolio1.0",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -9,10 +9,14 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "dependencies": "0.0.1",
+    "history": "^5.0.0",
     "nodemailer": "^6.4.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-parallax": "^3.0.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
     "react-spring": "^8.0.27",
